refactor: replace Collectors.toList() with Stream.toList() (Java 16+)
51 call sites converted across 37 files. Three cases kept as mutable
lists: PlaylistService (add() after collection), PlayQueueService
(JPA @ManyToMany setMediaFiles()), and SecurityService (List<GrantedAuthority>
covariance requires mutable collector). Unused Collectors imports removed.