@@ -35,7 +35,6 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 /**
  * A media file (audio, video or directory) with an assortment of its meta data.
@@ -559,7 +558,7 @@ public class MediaFile {
     }
 
     public static List<Integer> toIdList(List<MediaFile> from) {
-        return from.stream().map(toId()).collect(Collectors.toList());
+        return from.stream().map(toId()).toList();
     }
 
     public static Function<MediaFile, Integer> toId() {
