@@ -30,7 +30,6 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class CoverArtService {
@@ -176,7 +175,7 @@ public class CoverArtService {
                         return false;
                 }
             })
-            .collect(Collectors.toList());
+            .toList();
         coverArtRepository.deleteAll(expungeCoverArts);
     }
 
