@@ -43,7 +43,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
-import static java.util.stream.Collectors.toList;
 
 /**
  * Provides services for sharing media.
@@ -95,7 +94,7 @@ public class ShareService {
         List<ShareFile> files = shareRepository.findById(id).map(Share::getFiles).orElse(Collections.emptyList());
         return files.stream().map(sf -> mediaFileService.getMediaFile(sf.getMediaFileId()))
             .filter(mediaFile -> Objects.nonNull(mediaFile) && mediaFile.isPresent() && musicFolders.stream().anyMatch(folder -> folder.getId() == mediaFile.getFolder().getId()))
-            .collect(toList());
+            .toList();
     }
 
     @Transactional
