@@ -116,14 +116,14 @@ public class StatusService {
                 snapshot.parallelStream(),
                 inactiveStreamStatuses.values().parallelStream()
                         .filter(s -> !playerIds.contains(s.getPlayer().getId())))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<TransferStatus> getStreamStatusesForPlayer(Player player) {
         // unsynchronized stream access, but should be okay, we'll just be a bit behind
         return streamStatuses.parallelStream()
                 .filter(s -> s.getPlayer().getId().equals(player.getId()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public TransferStatus getInactiveStreamStatusForPlayer(Player player) {
@@ -242,7 +242,7 @@ public class StatusService {
     public List<PlayStatus> getActivePlayStatuses() {
         return activeLocalPlays.stream()
                 .filter(this::isAvailable)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -258,7 +258,7 @@ public class StatusService {
 
         return inactivePlayStatuses.values().stream()
                 .filter(s -> isAvailable(s))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
