@@ -16,7 +16,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class DefaultPlaylistExportHandler implements PlaylistExportHandler {
@@ -39,7 +38,7 @@ public class DefaultPlaylistExportHandler implements PlaylistExportHandler {
     private Playlist createChameleonGenericPlaylistFromDBId(int id) {
         Playlist newPlaylist = new Playlist();
         List<MediaFile> files = playlistRepository.findById(id).map(playlist -> {
-            return playlist.getPlaylistMediaFiles().stream().map(PlaylistMediaFile::getMediaFile).collect(Collectors.toList());
+            return playlist.getPlaylistMediaFiles().stream().map(PlaylistMediaFile::getMediaFile).toList();
         }).orElseGet(() -> {
             return new ArrayList<>();
         });
